<resources>
    <string name="no_internet_connection">No internet connection</string>
    <string name="network_failure">Network Failure</string>
    <string name="conversion_error">Conversion Error</string>
    <string name="app_name">HksPower</string>
    <string name="sign_up_from_here">Sign Up from Here</string>
    <string name="dont_you_have_an_account">Don\'t you have an account?</string>
    <string name="sign_in_now">Sign In Now</string>
    <string name="remember_me">Remember me</string>
    <string name="forget_password">Forget Password?</string>
</resources>