<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative01">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/l1"
        android:layout_width="fill_parent"
        android:layout_height="195dp"
        android:orientation="horizontal"
        android:background="@drawable/ic_login_top">
        <androidx.appcompat.widget.AppCompatImageView
           android:id="@+id/back_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="9dp"
            android:src="@drawable/ic_login_back">

        </androidx.appcompat.widget.AppCompatImageView>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:src="@drawable/hhks">

        </androidx.appcompat.widget.AppCompatImageView>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/l1"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_now"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="@color/purple_200"
            android:padding="8dip" />
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:clipToPadding="true"
            app:startIconDrawable="@drawable/ic_user"
            app:endIconMode="custom"
            app:hintEnabled="false"
            android:layout_marginTop="35dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/email_edt"
                android:layout_width="match_parent"
                android:text="info@optium.com"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:clipToPadding="true"
            app:startIconDrawable="@drawable/ic_password"
            app:hintEnabled="false"
            android:layout_marginTop="19dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.MyApp.TextInputLayout.Rounded">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/pass_edt"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:text="Optium@112233"
                android:layout_height="wrap_content">

            </androidx.appcompat.widget.AppCompatEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="13dp"
            android:layout_marginTop="9dp"
            android:orientation="horizontal">
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/remember_me_btn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="8" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="left"
                    android:text="@string/remember_me" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_weight="2.5"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="10">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/forget_pass"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="right"
                    android:text="@string/forget_password" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:orientation="vertical">
        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="1dp"
            android:elevation="5dp"
            android:visibility="gone"
            tools:ignore="MissingConstraints" />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_btn"
            android:layout_width="270dp"
            android:layout_height="55dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_login_btn"
            android:gravity="center"
            android:text="Sign in"
            android:textColor="@color/white"
            android:textSize="16sp">

        </androidx.appcompat.widget.AppCompatButton>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dip"
            android:text="@string/dont_you_have_an_account"
            android:textSize="14sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_txt_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="8dip"
            android:text="@string/sign_up_from_here"
            android:textColor="@color/purple_200"
            android:textSize="16sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>